// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFundingEnvironment retrieves the funding environment 1`] = `
[
  [
    "https://perseverance.chainflip.xyz",
    {
      "id": 1,
      "jsonrpc": "2.0",
      "method": "cf_funding_environment",
      "params": [],
    },
  ],
]
`;

exports[`getIngressEgressEnvironment retrieves the ingress egress environment 1`] = `
[
  [
    "https://perseverance.chainflip.xyz",
    {
      "id": 1,
      "jsonrpc": "2.0",
      "method": "cf_ingress_egress_environment",
      "params": [],
    },
  ],
]
`;

exports[`getPoolsEnvironment retrieves the pools environment 1`] = `
[
  [
    "https://perseverance.chainflip.xyz",
    {
      "id": 1,
      "jsonrpc": "2.0",
      "method": "cf_pool_info",
      "params": [],
    },
  ],
]
`;

exports[`getPoolsEnvironment retrieves the pools environment: pool environment 1`] = `
{
  "fees": {
    "Bitcoin": {
      "BTC": {
        "limitOrderFeeHundredthPips": 20,
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "rangeOrderFeeHundredthPips": 20,
      },
    },
    "Ethereum": {
      "ETH": {
        "limitOrderFeeHundredthPips": 20,
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "rangeOrderFeeHundredthPips": 20,
      },
      "FLIP": {
        "limitOrderFeeHundredthPips": 20,
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "rangeOrderFeeHundredthPips": 20,
      },
    },
    "Polkadot": {
      "DOT": {
        "limitOrderFeeHundredthPips": 20,
        "quoteAsset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "rangeOrderFeeHundredthPips": 20,
      },
    },
  },
}
`;

exports[`getSwappingEnvironment retrieves the swapping environment 1`] = `
[
  [
    "https://perseverance.chainflip.xyz",
    {
      "id": 1,
      "jsonrpc": "2.0",
      "method": "cf_swapping_environment",
      "params": [],
    },
  ],
]
`;
